Minor changes
git-svn-id: svn://svn.berlios.de/ecg/trunk@1088 3537aeea-94f2-0310-a3c2-ed66167d6be7